# ai-snacks

./: README.md
gpt-4-self-assess-lit-review/: README.md  count-tokens.py  main.py  pyproject.toml  query_with_context-1.txt  query_with_context-2.txt  query_with_context-3.txt  query_with_context.txt  sci-am-summarized.txt  training-data.txt  training-elicit-faq.txt  training-openai-report.txt  training-sci-american.txt
pop-rock-tabs-to-mingus/: README.md  install_and_run.sh  main.py  pop_rock_melody.mid  pyproject.toml
time-to-learn-coding-twitter-thread/: README.md  cleaned_data.csv  cleaner.py  durations.csv  flat-json-to-user_responses.py  flattened-thread.json  gpt-cleaning-script.py  gpt-semicleaned.txt  raw-thread-text.txt  semicleaned.txt  snapofsnaps.json  snapreader.py  user_responses.csv
